--- a/p8105_hw5_js5354.md
+++ b/p8105_hw5_js5354.md
@@ -1,19 +1,11 @@
----
-title: "HW5 js5354"
-author: "Jiayi Shen"
-output: github_document
----
+HW5 js5354
+================
+Jiayi Shen
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(rvest)
-set.seed(1)
-```
+Problem 1
+---------
 
-
-## Problem 1
-```{r load study data}
+``` r
 # create a dataframe containing all file names
 participant_files = as.data.frame(list.files(path = "./data")) 
 # rename column
@@ -38,8 +30,7 @@ participant_data =
 bind_cols(participant_files, participant_data)
 ```
 
-```{r tidy study data}
-
+``` r
 # transform the dataframe to be longitudinal using gather
 # clean up variable names
 participant_data = 
@@ -54,10 +45,9 @@ participant_data %>%
 
 
 # Is it necessary to spread the dataset?? 
-
 ```
 
-```{r plotting observations on each subject over time}
+``` r
 participant_data %>% 
   group_by(ID) %>% 
   ggplot(aes(x = as.numeric(week), y = value, color = ID)) +
@@ -66,7 +56,8 @@ participant_data %>%
   labs(title = "Observations on each subject over 8 weeks", 
        x = "week",
        y = "Value of observations")
-
 ```
 
-On week 1, the mean observation values for the control group was `r round(mean(filter(participant_data, group == "con", week == 1)$value), digits = 2)` and that of the experimental group was `r round(mean(filter(participant_data, group == "exp", week == 1)$value), digits = 2)`. Though both the control arm and the experimental arm started off around 1, values in the experimental arm showed a significant increase over the 8-week course and ended up around `r round(mean(filter(participant_data, group == "exp", week == 8)$value), digits = 2)` on average. On the other hand, the observation values of the control arm stayed relatively steady over time. 
+![](p8105_hw5_js5354_files/figure-markdown_github/plotting%20observations%20on%20each%20subject%20over%20time-1.png)
+
+On week 1, the mean observation values for the control group was 0.92 and that of the experimental group was 1.14. Though both the control arm and the experimental arm started off around 1, values in the experimental arm showed a significant increase over the 8-week course and ended up around 5.12 on average. On the other hand, the observation values of the control arm stayed relatively steady over time.
