Add back the Tulsa, AL case

--- a/p8105_hw5_js5354.md
+++ b/p8105_hw5_js5354.md
@@ -82,14 +82,14 @@ homicide_data %>%
 homicide_data = 
 homicide_data %>% 
   group_by(city_state) %>% 
-  mutate(total = length(uid))
+  mutate(total = length(uid)) 
 
 # the number of unsolved homicides
 homicide_data = 
 homicide_data %>% 
-  filter(disposition %in% c("Closed without arrest", "Open/No arrest")) %>% 
+  filter(disposition == "Closed by arrest") %>% 
   group_by(city_state) %>% 
-  mutate(unsolved = length(uid)) 
+  mutate(unsolved = total - length(uid)) 
 
 # Table that shows total and unsolved cases.
 unsolved_summary = 
@@ -151,13 +151,14 @@ unsolved_summary %>% knitr::kable()
 | Stockton,CA       |    444|       266|
 | Tampa,FL          |    208|        95|
 | Tulsa,OK          |    583|       193|
+| Tulsa,AL          |      1|         0|
 | Washington,DC     |   1345|       589|
 
 ``` r
 # prop.test
 
 prop_homicide_btm = 
-  prop.test(x = unsolved_summary$unsolved[unsolved_summary$city_state == "Baltimore,MD"], 
+  prop.test(x = unsolved_summary$unsolved[unsolved_summary$city_state =="Baltimore,MD"], 
             n = unsolved_summary$total[unsolved_summary$city_state == "Baltimore,MD"],
             alternative = "two.sided") %>% 
   broom::tidy()
@@ -195,6 +196,10 @@ unsolved_summary %>%
   mutate(prop_test = map(unsolved_summary$city_state, neat_prop_test)) %>% 
   unnest()
 ```
+
+    ## Warning in prop.test(x =
+    ## unsolved_summary$unsolved[unsolved_summary$city_state == : Chi-squared
+    ## approximation may be incorrect
 
 ``` r
 # plotting the estimates and CIs for each city
